# are_you_akinator

./: .env.example  .gitignore  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  ecosystem.config.js  famous_people.txt  main.py  pyproject.toml  run_backend.py  start_cli.py  start_frontend.py  start_pm2.sh
backend/app/: main.py
backend/app/api/: game.py  health.py
backend/app/config/: settings.py
backend/app/models/: game.py  person.py
backend/app/services/: ai_service.py  game_manager.py
backend/app/utils/: wikipedia.py
cli/: client.py  config.py  main.py  ui.py
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: AnswerDisplay.jsx  ConnectionStatus.jsx  ErrorBoundary.jsx  GameBoard.jsx  Loading.jsx  QuestionHistory.jsx  QuestionInput.jsx  WinScreen.jsx
frontend/src/hooks/: useGame.js
frontend/src/services/: api.js
frontend/src/styles/: index.css
